Fix for UI issue on iphone/ipad with NNN results returned for XXX.
git-svn-id: http://ala-hubs.googlecode.com/svn/trunk/hubs-webapp@1076 1df052cb-f7c2-36cd-ec53-7bc1070de0c5

--- a/src/main/webapp/css/ala/bootstrapAdditions.css
+++ b/src/main/webapp/css/ala/bootstrapAdditions.css
@@ -350,5 +350,8 @@ h2#headingSciName {
     body.show #content2 {
         width: 100%;
     }
+    #resultsReturned {
+        margin-left: 60px !important; /* Fix for absolutely positioned costomise button to the left */
+    }
 }
 
